# QriBot-2025

./: .dockerignore  .env-demo  .env.example  .gitignore  Dockerfile  bot.py  docker-compose.yaml  fonts.conf  pyproject.toml  run.sh
plugins/foward_analyse/: __init__.py  cmd_ana.py  help.md  help.txt  prompts.py
plugins/foward_analyse/prompts/: alignment_prompt.md  blank.md  how_to_say.md  pov.md  test.html
plugins/justice/: __init__.py
plugins/justice/prompts/: alignment_prompt.md  how_to_say.md
plugins/private_message_logger/: __init__.py
